<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="5dp"
        >

        <RelativeLayout
            android:id="@+id/friend_request_adapter"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/friend_request_adapter_image"
                android:layout_width="60dp"
                android:layout_height="46dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="336dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/nav_header_desc"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/friend_request_adapter_accountid"
                android:layout_width="141dp"
                android:layout_height="27dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="78dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="183dp"
                android:layout_marginBottom="15dp"
                android:text="TextView" />


            <Button
                android:id="@+id/friend_request_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="230dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="2dp"
                android:text="@string/friendRequestAccept"
                android:textSize="10sp" />

            <Button
                android:id="@+id/friend_request_decline"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="310dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="2dp"
                android:text="@string/friendRequestDecline"
                android:textSize="10sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
